--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
+				<!-- Simple navigation for assignment -->
+				<header class="wrapper style1 align-center">
+					<div class="inner">
+						<nav>
+							<ul class="actions stacked">
+								<li><a href="index.html" class="button small primary">Home</a></li>
+								<li><a href="#gallery" class="button small">Gallery</a></li>
+								<li><a href="sample.html" class="button small">Sample Page</a></li>
+							</ul>
+						</nav>
+					</div>
+				</header>
+
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
@@ -74,7 +87,7 @@
 					</section>
 
 				<!-- Five -->
-					<section class="wrapper style1 align-center">
+					<section id="gallery" class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Aquaponics in action</h2>
 							<p>Take a look at different aquaponics setups, from compact home systems to classroom demos and community builds that all use the same simple, powerful idea.</p>
